# GStreamer

./: .gitignore  CMakeLists.txt  CreateSDK.cmake  Deps.cmake  Jenkinsfile  README-build.txt  README.md  make-linux.sh  make-mac.sh  make-win-msvc-2019.bat  make.bat  make.sh  meson.build  update_rpath_linux.sh  update_rpath_macos.sh
cmake/compiler/: cl.cmake
cmake/flags/: msvc_runtime_library_to_meson_flags.cmake  msvc_runtime_library_to_msvc_flags.cmake
cmake/toolchains/: clang_x64_linux_cross_windows.cmake  msvc_x64_windows.cmake  msvc_x86_windows.cmake
scripts/: generate_init_static_plugins.py
subprojects/FFmpeg/: meson.build  meson_options.txt
subprojects/FFmpeg/libavcodec/: allcodecs.c  meson.build
subprojects/FFmpeg/libswscale/x86/: yuv2rgb.c
subprojects/glib/gio/: gdbusprivate.c  glocalfile.c  glocalfileinfo.c  gregistrysettingsbackend.c  gtestdbus.c  gwin32appinfo.c  gwin32file-sync-stream.h  gwin32mount.c  gwin32networkmonitor.c  gwin32packageparser.c  gwin32registrykey.c  meson.build
subprojects/glib/gio/win32/: gwin32fsmonitorutils.c
subprojects/glib/glib/: gbacktrace.c  gcharset.c  giowin32.c  glib-init.c  gmessages.c  goption.c  gpoll.c  gslice.c  gspawn-win32-helper.c  gspawn-win32.c  gstdio.c  gthread-win32.c  gtimezone.c  gutils.c  gwin32.c  meson.build  win_iconv.c
subprojects/glib/gmodule/: gmodule-win32.c  meson.build
subprojects/glib/gobject/: gtype.c  meson.build
subprojects/glib/gthread/: meson.build
subprojects/glib/po/: da.po
subprojects/gst-editing-services/tools/: ges-launcher-kb.c
subprojects/gst-libav/: meson.build
subprojects/gst-plugins-bad/gst-libs/gst/d3d11/: gstd3d11device.c  gstd3d11utils.c  gstd3d11utils.h
subprojects/gst-plugins-bad/gst/dvdspu/: Notes.txt
subprojects/gst-plugins-bad/sys/decklink/win/: DeckLinkAPI.h  DeckLinkAPIDispatch.cpp  DeckLinkAPI_i.c
subprojects/gst-plugins-base/: meson.build
subprojects/gst-plugins-base/ext/gl/: meson.build
subprojects/gst-plugins-base/ext/ogg/: meson.build
subprojects/gst-plugins-base/ext/vorbis/: meson.build
subprojects/gst-plugins-base/gst-libs/gst/video/: gstvideotimecode.c
subprojects/gst-plugins-base/tools/: gst-play-kb.c
subprojects/gst-plugins-good/ext/libpng/: meson.build
subprojects/gst-plugins-good/gst/rtp/: rtpulpfeccommon.c
subprojects/gst-plugins-good/gst/rtpmanager/: gstrtpst2022-1-fecdec.c  gstrtpst2022-1-fecenc.c
subprojects/gstreamer/: meson.build
subprojects/gstreamer/gst/: gst.c  gstinfo.c  gstinfo.h  gstmacros.h
subprojects/libffi/: .gitlab-ci.yml  meson.build
subprojects/libffi/src/: meson.build
subprojects/opus/: meson.build
subprojects/vorbis/: meson.build
subprojects/vorbis/lib/: meson.build
